--- a/assets/bibliography/2018-12-22-distill.bib
+++ b/assets/bibliography/2018-12-22-distill.bib
@@ -1,7 +1,7 @@
-@article{gregor2015draw,
-  title={DRAW: A recurrent neural network for image generation},
-  author={Gregor, Karol and Danihelka, Ivo and Graves, Alex and Rezende, Danilo Jimenez and Wierstra, Daan},
-  journal={arXiv preprint, arXiv:1502.04623},
-  year={2015},
-  url={https://arxiv.org/pdf/1502.04623.pdf}
+@inproceedings{khan2024vrf,
+  title={VRF: Vehicle Road-side Point Cloud Fusion},
+  author={Khan, Kaleem Nawaz and Khalid, Ali and Turkar, Yash and Dantu, Karthik and Ahmad, Fawad},
+  booktitle={Proceedings of the 22nd Annual International Conference on Mobile Systems, Applications and Services},
+  pages={547--560},
+  year={2024}
 }
