--- a/assets/bibliography/2018-12-22-distill.bib
+++ b/assets/bibliography/2018-12-22-distill.bib
@@ -5,3 +5,51 @@
   pages={547--560},
   year={2024}
 }
+@inproceedings{khan2024vrf,
+  bibtex_show={true},
+  title={VRF: Vehicle Road-side Point Cloud Fusion},
+  author={Khan, Kaleem Nawaz and Khalid, Ali and Turkar, Yash and Dantu, Karthik and Ahmad, Fawad},
+  booktitle={Proceedings of the 22nd Annual International Conference on Mobile Systems, Applications and Services},
+  pages={547--560},
+  year={2024},
+  url={https://dl.acm.org/doi/abs/10.1145/3643832.3661874},
+  selected={true}
+}
+
+@article{zeng2023imagecas,
+  title={Imagecas: A large-scale dataset and benchmark for coronary artery segmentation based on computed tomography angiography images},
+  author={Zeng, An and Wu, Chunbiao and Lin, Guisen and Xie, Wen and Hong, Jin and Huang, Meiping and Zhuang, Jian and Bi, Shanshan and Pan, Dan and Ullah, Najeeb and others},
+  journal={Computerized Medical Imaging and Graphics},
+  volume={109},
+  pages={102287},
+  year={2023},
+  publisher={Elsevier},
+  url={https://doi.org/10.1016/j.compmedimag.2023.102287},
+  selected={true}
+}
+
+@article{khan2022op2vec,
+  title={Op2Vec: An Opcode Embedding Technique and Dataset Design for End-to-End Detection of Android Malware},
+  author={Khan, Kaleem Nawaz and Ullah, Najeeb and Ali, Sikandar and Khan, Muhammad Salman and Nauman, Mohammad and Ghani, Anwar},
+  journal={Security and Communication Networks},
+  volume={2022},
+  number={1},
+  pages={3710968},
+  year={2022},
+  publisher={Wiley Online Library},
+  url={https://onlinelibrary.wiley.com/doi/pdf/10.1155/2022/3710968},
+  selected={true}
+}
+
+@article{khan2021deep,
+  title={Deep learning based classification of unsegmented phonocardiogram spectrograms leveraging transfer learning},
+  author={Khan, Kaleem Nawaz and Khan, Faiq Ahmad and Abid, Anam and Olmez, Tamer and Dokur, Zumray and Khandakar, Amith and Chowdhury, Muhammad EH and Khan, Muhammad Salman},
+  journal={Physiological measurement},
+  volume={42},
+  number={9},
+  pages={095003},
+  year={2021},
+  publisher={IOP Publishing},
+  url={https://iopscience.iop.org/article/10.1088/1361-6579/ac1d59/pdf},
+  selected={true}
+}
