--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -42,6 +42,79 @@
   pages={095003},
   year={2021},
   publisher={IOP Publishing},
-   url={https://iopscience.iop.org/article/10.1088/1361-6579/ac1d59/pdf},
+  url={https://iopscience.iop.org/article/10.1088/1361-6579/ac1d59/pdf},
   selected={true}
+}
+@incollection{khan2023advanced,
+  title={Advanced Deep Learning for Heart Sounds Classification},
+  author={Khan, Muhammad Salman and Khan, Faiq Ahmad and Khan, Kaleem Nawaz and Rana, Shahid Imran and Al-Hashemi, Mohammed Abdulla AA},
+  booktitle={Advances in Deep Generative Models for Medical Artificial Intelligence},
+  pages={225--248},
+  year={2023},
+  publisher={Springer}
+}
+
+@inproceedings{ahmad2021automated,
+  title={Automated assessment of lymphocytes using machine learning techniques},
+  author={Ahmad, Afaq and Ullah, Azmat and Khan, Kaleem Nawaz and Khan, Muhammad Salman},
+  booktitle={2021 International Conference on Artificial Intelligence (ICAI)},
+  pages={108--112},
+  year={2021},
+  organization={IEEE}
+}
+
+@inproceedings{qasim2021performance,
+  title={Performance evaluation of background subtraction techniques for video frames},
+  author={Qasim, Salman and Khan, Kaleem Nawaz and Yu, Miao and Khan, Muhammad Salman},
+  booktitle={2021 International Conference on Artificial Intelligence (ICAI)},
+  pages={102--107},
+  year={2021},
+  organization={IEEE}
+}
+
+@article{salman2022deep,
+  title={Deep Learning Assisted Automated Assessment of Thalassaemia from Haemoglobin Electrophoresis Images},
+  author={Salman Khan, Muhammad and Ullah, Azmat and Khan, Kaleem Nawaz and Riaz, Huma and Yousafzai, Yasar Mehmood and Rahman, Tawsifur and Chowdhury, Muhammad EH and Abul Kashem, Saad Bin},
+  journal={Diagnostics},
+  volume={12},
+  number={10},
+  pages={2405},
+  year={2022},
+  publisher={MDPI}
+}
+
+@inproceedings{dastagir2021computer,
+  title={Computer-aided phonocardiogram classification using multidomain time and frequency features},
+  author={Dastagir, Jehan and Khan, Faiq Ahmad and Khan, Muhammad Salman and Khan, Kaleem Nawaz},
+  booktitle={2021 International Conference on Artificial Intelligence (ICAI)},
+  pages={50--55},
+  year={2021},
+  organization={IEEE}
+}
+
+@inproceedings{ahmad2021automatic,
+  title={Automatic classification of heart sounds using long short-term memory},
+  author={Ahmad, Bilal and Khan, Faiq Ahmad and Khan, Kaleem Nawaz and Khan, Muhammad Salman},
+  booktitle={2021 15th International Conference on Open Source Systems and Technologies (ICOSST)},
+  pages={1--6},
+  year={2021},
+  organization={IEEE}
+}
+
+@inproceedings{hasib2021vision,
+  title={Vision-based human posture classification and fall detection using convolutional neural network},
+  author={Hasib, Rabia and Khan, Kaleem Nawaz and Yu, Miao and Khan, Muhammad Salman},
+  booktitle={2021 International conference on artificial intelligence (ICAI)},
+  pages={74--79},
+  year={2021},
+  organization={IEEE}
+}
+
+@inproceedings{islam2021evaluation,
+  title={Evaluation of preprocessing techniques for U-Net based automated liver segmentation},
+  author={Islam, Muhammad and Khan, Kaleem Nawaz and Khan, Muhammad Salman},
+  booktitle={2021 International Conference on Artificial Intelligence (ICAI)},
+  pages={187--192},
+  year={2021},
+  organization={IEEE}
 }
