--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,4 +1,5 @@
 @inproceedings{khan2024vrf,
+  abbr={MobiSys2024},
   title={VRF: Vehicle Road-side Point Cloud Fusion},
   author={Khan, Kaleem Nawaz and Khalid, Ali and Turkar, Yash and Dantu, Karthik and Ahmad, Fawad},
   booktitle={Proceedings of the 22nd Annual International Conference on Mobile Systems, Applications and Services},
@@ -9,6 +10,7 @@
 }
 
 @article{zeng2023imagecas,
+  abbr={CMIG},
   title={Imagecas: A large-scale dataset and benchmark for coronary artery segmentation based on computed tomography angiography images},
   author={Zeng, An and Wu, Chunbiao and Lin, Guisen and Xie, Wen and Hong, Jin and Huang, Meiping and Zhuang, Jian and Bi, Shanshan and Pan, Dan and Ullah, Najeeb and others},
   journal={Computerized Medical Imaging and Graphics},
@@ -20,6 +22,7 @@
 }
 
 @incollection{khan2023advanced,
+  abbr={Springer Book Chapter},
   title={Advanced Deep Learning for Heart Sounds Classification},
   author={Khan, Muhammad Salman and Khan, Faiq Ahmad and Khan, Kaleem Nawaz and Rana, Shahid Imran and Al-Hashemi, Mohammed Abdulla AA},
   booktitle={Advances in Deep Generative Models for Medical Artificial Intelligence},
@@ -29,6 +32,7 @@
 }
 
 @article{khan2022op2vec,
+  abbr={SCN},
   title={Op2Vec: An Opcode Embedding Technique and Dataset Design for End-to-End Detection of Android Malware},
   author={Khan, Kaleem Nawaz and Ullah, Najeeb and Ali, Sikandar and Khan, Muhammad Salman and Nauman, Mohammad and Ghani, Anwar},
   journal={Security and Communication Networks},
@@ -41,6 +45,7 @@
 }
 
 @article{salman2022deep,
+abbr={Diagnostics},
   title={Deep Learning Assisted Automated Assessment of Thalassaemia from Haemoglobin Electrophoresis Images},
   author={Salman Khan, Muhammad and Ullah, Azmat and Khan, Kaleem Nawaz and Riaz, Huma and Yousafzai, Yasar Mehmood and Rahman, Tawsifur and Chowdhury, Muhammad EH and Abul Kashem, Saad Bin},
   journal={Diagnostics},
@@ -52,6 +57,7 @@
 }
 
 @article{khan2021deep,
+abbr={Physiological Measurement},
   title={Deep learning based classification of unsegmented phonocardiogram spectrograms leveraging transfer learning},
   author={Khan, Kaleem Nawaz and Khan, Faiq Ahmad and Abid, Anam and Olmez, Tamer and Dokur, Zumray and Khandakar, Amith and Chowdhury, Muhammad EH and Khan, Muhammad Salman},
   journal={Physiological measurement},
@@ -64,6 +70,7 @@
 }
 
 @inproceedings{hasib2021vision,
+abbr={ICAI2021},
   title={Vision-based human posture classification and fall detection using convolutional neural network},
   author={Hasib, Rabia and Khan, Kaleem Nawaz and Yu, Miao and Khan, Muhammad Salman},
   booktitle={2021 International conference on artificial intelligence (ICAI)},
@@ -73,6 +80,7 @@
 }
 
 @inproceedings{qasim2021performance,
+abbr={ICAI2021},
   title={Performance evaluation of background subtraction techniques for video frames},
   author={Qasim, Salman and Khan, Kaleem Nawaz and Yu, Miao and Khan, Muhammad Salman},
   booktitle={2021 International Conference on Artificial Intelligence (ICAI)},
@@ -82,6 +90,7 @@
 }
 
 @inproceedings{dastagir2021computer,
+abbr={ICAI2021},
   title={Computer-aided phonocardiogram classification using multidomain time and frequency features},
   author={Dastagir, Jehan and Khan, Faiq Ahmad and Khan, Muhammad Salman and Khan, Kaleem Nawaz},
   booktitle={2021 International Conference on Artificial Intelligence (ICAI)},
@@ -91,6 +100,7 @@
 }
 
 @inproceedings{ahmad2021automatic,
+abbr={ICOSST2021},
   title={Automatic classification of heart sounds using long short-term memory},
   author={Ahmad, Bilal and Khan, Faiq Ahmad and Khan, Kaleem Nawaz and Khan, Muhammad Salman},
   booktitle={2021 15th International Conference on Open Source Systems and Technologies (ICOSST)},
@@ -100,6 +110,7 @@
 }
 
 @inproceedings{ahmad2021automated,
+abbr={ICAI2021},
   title={Automated assessment of lymphocytes using machine learning techniques},
   author={Ahmad, Afaq and Ullah, Azmat and Khan, Kaleem Nawaz and Khan, Muhammad Salman},
   booktitle={2021 International Conference on Artificial Intelligence (ICAI)},
@@ -109,6 +120,7 @@
 }
 
 @inproceedings{islam2021evaluation,
+abbr={ICAI2021},
   title={Evaluation of preprocessing techniques for U-Net based automated liver segmentation},
   author={Islam, Muhammad and Khan, Kaleem Nawaz and Khan, Muhammad Salman},
   booktitle={2021 International Conference on Artificial Intelligence (ICAI)},
