--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,6 +10,7 @@
 }
 
 @article{zeng2023imagecas,
+  abbr={CMIG},
   title={Imagecas: A large-scale dataset and benchmark for coronary artery segmentation based on computed tomography angiography images},
   author={Zeng, An and Wu, Chunbiao and Lin, Guisen and Xie, Wen and Hong, Jin and Huang, Meiping and Zhuang, Jian and Bi, Shanshan and Pan, Dan and Ullah, Najeeb and others},
   journal={Computerized Medical Imaging and Graphics},
@@ -21,6 +22,7 @@
 }
 
 @incollection{khan2023advanced,
+  abbr={Book Chapter},
   title={Advanced Deep Learning for Heart Sounds Classification},
   author={Khan, Muhammad Salman and Khan, Faiq Ahmad and Khan, Kaleem Nawaz and Rana, Shahid Imran and Al-Hashemi, Mohammed Abdulla AA},
   booktitle={Advances in Deep Generative Models for Medical Artificial Intelligence},
@@ -30,6 +32,7 @@
 }
 
 @article{khan2022op2vec,
+  abbr={SCN},
   title={Op2Vec: An Opcode Embedding Technique and Dataset Design for End-to-End Detection of Android Malware},
   author={Khan, Kaleem Nawaz and Ullah, Najeeb and Ali, Sikandar and Khan, Muhammad Salman and Nauman, Mohammad and Ghani, Anwar},
   journal={Security and Communication Networks},
@@ -42,6 +45,7 @@
 }
 
 @article{salman2022deep,
+abbr={Diagnostics},
   title={Deep Learning Assisted Automated Assessment of Thalassaemia from Haemoglobin Electrophoresis Images},
   author={Salman Khan, Muhammad and Ullah, Azmat and Khan, Kaleem Nawaz and Riaz, Huma and Yousafzai, Yasar Mehmood and Rahman, Tawsifur and Chowdhury, Muhammad EH and Abul Kashem, Saad Bin},
   journal={Diagnostics},
@@ -53,6 +57,7 @@
 }
 
 @article{khan2021deep,
+abbr={Phys. Measurement},
   title={Deep learning based classification of unsegmented phonocardiogram spectrograms leveraging transfer learning},
   author={Khan, Kaleem Nawaz and Khan, Faiq Ahmad and Abid, Anam and Olmez, Tamer and Dokur, Zumray and Khandakar, Amith and Chowdhury, Muhammad EH and Khan, Muhammad Salman},
   journal={Physiological measurement},
@@ -95,7 +100,7 @@ abbr={ICAI2021},
 }
 
 @inproceedings{ahmad2021automatic,
-abbr={ICOSST2021},
+abbr={ICOSSTI2021},
   title={Automatic classification of heart sounds using long short-term memory},
   author={Ahmad, Bilal and Khan, Faiq Ahmad and Khan, Kaleem Nawaz and Khan, Muhammad Salman},
   booktitle={2021 15th International Conference on Open Source Systems and Technologies (ICOSST)},
