--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,5 @@
 @inproceedings{khan2024vrf,
-  abbr={MobiSys2024},
+  abbr={MobiSys},
   title={VRF: Vehicle Road-side Point Cloud Fusion},
   author={Khan, Kaleem Nawaz and Khalid, Ali and Turkar, Yash and Dantu, Karthik and Ahmad, Fawad},
   booktitle={Proceedings of the 22nd Annual International Conference on Mobile Systems, Applications and Services},
@@ -70,7 +70,7 @@ abbr={Phys. Measurement},
 }
 
 @inproceedings{hasib2021vision,
-abbr={ICAI2021},
+abbr={ICAI},
   title={Vision-based human posture classification and fall detection using convolutional neural network},
   author={Hasib, Rabia and Khan, Kaleem Nawaz and Yu, Miao and Khan, Muhammad Salman},
   booktitle={2021 International conference on artificial intelligence (ICAI)},
@@ -80,7 +80,7 @@ abbr={ICAI2021},
 }
 
 @inproceedings{qasim2021performance,
-abbr={ICAI2021},
+abbr={ICAI},
   title={Performance evaluation of background subtraction techniques for video frames},
   author={Qasim, Salman and Khan, Kaleem Nawaz and Yu, Miao and Khan, Muhammad Salman},
   booktitle={2021 International Conference on Artificial Intelligence (ICAI)},
@@ -90,7 +90,7 @@ abbr={ICAI2021},
 }
 
 @inproceedings{dastagir2021computer,
-abbr={ICAI2021},
+abbr={ICAI},
   title={Computer-aided phonocardiogram classification using multidomain time and frequency features},
   author={Dastagir, Jehan and Khan, Faiq Ahmad and Khan, Muhammad Salman and Khan, Kaleem Nawaz},
   booktitle={2021 International Conference on Artificial Intelligence (ICAI)},
@@ -100,7 +100,7 @@ abbr={ICAI2021},
 }
 
 @inproceedings{ahmad2021automatic,
-abbr={ICOSSTI2021},
+abbr={ICOSST},
   title={Automatic classification of heart sounds using long short-term memory},
   author={Ahmad, Bilal and Khan, Faiq Ahmad and Khan, Kaleem Nawaz and Khan, Muhammad Salman},
   booktitle={2021 15th International Conference on Open Source Systems and Technologies (ICOSST)},
@@ -110,7 +110,7 @@ abbr={ICOSSTI2021},
 }
 
 @inproceedings{ahmad2021automated,
-abbr={ICAI2021},
+abbr={ICAI},
   title={Automated assessment of lymphocytes using machine learning techniques},
   author={Ahmad, Afaq and Ullah, Azmat and Khan, Kaleem Nawaz and Khan, Muhammad Salman},
   booktitle={2021 International Conference on Artificial Intelligence (ICAI)},
@@ -120,7 +120,7 @@ abbr={ICAI2021},
 }
 
 @inproceedings{islam2021evaluation,
-abbr={ICAI2021},
+abbr={ICAI},
   title={Evaluation of preprocessing techniques for U-Net based automated liver segmentation},
   author={Islam, Muhammad and Khan, Kaleem Nawaz and Khan, Muhammad Salman},
   booktitle={2021 International Conference on Artificial Intelligence (ICAI)},
