--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,16 +1,22 @@
 @inproceedings{khan2024vrf,
   abbr={MobiSys},
+  bibtex_show={true},
   title={VRF: Vehicle Road-side Point Cloud Fusion},
   author={Khan, Kaleem Nawaz and Khalid, Ali and Turkar, Yash and Dantu, Karthik and Ahmad, Fawad},
   booktitle={Proceedings of the 22nd Annual International Conference on Mobile Systems, Applications and Services},
   pages={547--560},
   year={2024},
   url={https://dl.acm.org/doi/abs/10.1145/3643832.3661874},
+  html={https://dl.acm.org/doi/abs/10.1145/3643832.3661874},
+  pdf={example_pdf.pdf},
+  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
   selected={true}
+
 }
 
 @article{zeng2023imagecas,
   abbr={CMIG},
+  bibtex_show={true},
   title={Imagecas: A large-scale dataset and benchmark for coronary artery segmentation based on computed tomography angiography images},
   author={Zeng, An and Wu, Chunbiao and Lin, Guisen and Xie, Wen and Hong, Jin and Huang, Meiping and Zhuang, Jian and Bi, Shanshan and Pan, Dan and Ullah, Najeeb and others},
   journal={Computerized Medical Imaging and Graphics},
@@ -23,6 +29,7 @@
 
 @incollection{khan2023advanced,
   abbr={Book Chapter},
+  bibtex_show={true},
   title={Advanced Deep Learning for Heart Sounds Classification},
   author={Khan, Muhammad Salman and Khan, Faiq Ahmad and Khan, Kaleem Nawaz and Rana, Shahid Imran and Al-Hashemi, Mohammed Abdulla AA},
   booktitle={Advances in Deep Generative Models for Medical Artificial Intelligence},
@@ -33,6 +40,7 @@
 
 @article{khan2022op2vec,
   abbr={SCN},
+  bibtex_show={true},
   title={Op2Vec: An Opcode Embedding Technique and Dataset Design for End-to-End Detection of Android Malware},
   author={Khan, Kaleem Nawaz and Ullah, Najeeb and Ali, Sikandar and Khan, Muhammad Salman and Nauman, Mohammad and Ghani, Anwar},
   journal={Security and Communication Networks},
@@ -46,6 +54,7 @@
 
 @article{salman2022deep,
 abbr={Diagnostics},
+bibtex_show={true},
   title={Deep Learning Assisted Automated Assessment of Thalassaemia from Haemoglobin Electrophoresis Images},
   author={Salman Khan, Muhammad and Ullah, Azmat and Khan, Kaleem Nawaz and Riaz, Huma and Yousafzai, Yasar Mehmood and Rahman, Tawsifur and Chowdhury, Muhammad EH and Abul Kashem, Saad Bin},
   journal={Diagnostics},
@@ -58,6 +67,7 @@ abbr={Diagnostics},
 
 @article{khan2021deep,
 abbr={Phys. Measurement},
+bibtex_show={true},
   title={Deep learning based classification of unsegmented phonocardiogram spectrograms leveraging transfer learning},
   author={Khan, Kaleem Nawaz and Khan, Faiq Ahmad and Abid, Anam and Olmez, Tamer and Dokur, Zumray and Khandakar, Amith and Chowdhury, Muhammad EH and Khan, Muhammad Salman},
   journal={Physiological measurement},
@@ -71,6 +81,7 @@ abbr={Phys. Measurement},
 
 @inproceedings{hasib2021vision,
 abbr={ICAI},
+bibtex_show={true},
   title={Vision-based human posture classification and fall detection using convolutional neural network},
   author={Hasib, Rabia and Khan, Kaleem Nawaz and Yu, Miao and Khan, Muhammad Salman},
   booktitle={2021 International conference on artificial intelligence (ICAI)},
@@ -81,6 +92,7 @@ abbr={ICAI},
 
 @inproceedings{qasim2021performance,
 abbr={ICAI},
+bibtex_show={true},
   title={Performance evaluation of background subtraction techniques for video frames},
   author={Qasim, Salman and Khan, Kaleem Nawaz and Yu, Miao and Khan, Muhammad Salman},
   booktitle={2021 International Conference on Artificial Intelligence (ICAI)},
@@ -91,6 +103,7 @@ abbr={ICAI},
 
 @inproceedings{dastagir2021computer,
 abbr={ICAI},
+bibtex_show={true},
   title={Computer-aided phonocardiogram classification using multidomain time and frequency features},
   author={Dastagir, Jehan and Khan, Faiq Ahmad and Khan, Muhammad Salman and Khan, Kaleem Nawaz},
   booktitle={2021 International Conference on Artificial Intelligence (ICAI)},
@@ -101,6 +114,7 @@ abbr={ICAI},
 
 @inproceedings{ahmad2021automatic,
 abbr={ICOSST},
+bibtex_show={true},
   title={Automatic classification of heart sounds using long short-term memory},
   author={Ahmad, Bilal and Khan, Faiq Ahmad and Khan, Kaleem Nawaz and Khan, Muhammad Salman},
   booktitle={2021 15th International Conference on Open Source Systems and Technologies (ICOSST)},
@@ -111,6 +125,7 @@ abbr={ICOSST},
 
 @inproceedings{ahmad2021automated,
 abbr={ICAI},
+bibtex_show={true},
   title={Automated assessment of lymphocytes using machine learning techniques},
   author={Ahmad, Afaq and Ullah, Azmat and Khan, Kaleem Nawaz and Khan, Muhammad Salman},
   booktitle={2021 International Conference on Artificial Intelligence (ICAI)},
@@ -121,6 +136,7 @@ abbr={ICAI},
 
 @inproceedings{islam2021evaluation,
 abbr={ICAI},
+bibtex_show={true},
   title={Evaluation of preprocessing techniques for U-Net based automated liver segmentation},
   author={Islam, Muhammad and Khan, Kaleem Nawaz and Khan, Muhammad Salman},
   booktitle={2021 International Conference on Artificial Intelligence (ICAI)},
