--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,10 +6,9 @@
   booktitle={Proceedings of the 22nd Annual International Conference on Mobile Systems, Applications and Services},
   pages={547--560},
   year={2024},
-  url={https://dl.acm.org/doi/abs/10.1145/3643832.3661874},
   html={https://dl.acm.org/doi/abs/10.1145/3643832.3661874},
-  pdf={example_pdf.pdf},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
+  pdf={https://dl.acm.org/doi/pdf/10.1145/3643832.3661874},
+  demo={https://www.youtube.com/watch?v=X6kXyca23g0&ab_channel=VRF-Mobisys24},
   selected={true}
 
 }
