--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,7 @@
   year={2024},
   html={https://dl.acm.org/doi/abs/10.1145/3643832.3661874},
   pdf={https://dl.acm.org/doi/pdf/10.1145/3643832.3661874},
-  demo={https://www.youtube.com/watch?v=X6kXyca23g0&ab_channel=VRF-Mobisys24},
+  video={https://www.youtube.com/watch?v=X6kXyca23g0&ab_channel=VRF-Mobisys24},
   selected={true}
 
 }
