--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,6 +24,8 @@
   year={2023},
   publisher={Elsevier},
   url={https://doi.org/10.1016/j.compmedimag.2023.102287},
+  html={https://doi.org/10.1016/j.compmedimag.2023.102287},
+  pdf={https://pdf.sciencedirectassets.com/271303/1-s2.0-S0895611123X00068/1-s2.0-S0895611123001052/main.pdf?X-Amz-Security-Token=IQoJb3JpZ2luX2VjEOn%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEaCXVzLWVhc3QtMSJHMEUCIQCNQXul40Z%2BS9vkGy2BKmwyybhzpMJq1OtYGqxW2Rk%2BkgIgDyXxBONzmltjOdVg%2F3IlSd4Ltsep0phBX0nBPr1jdakqvAUIsv%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FARAFGgwwNTkwMDM1NDY4NjUiDFL2Oe0h%2BxZ8XY88hyqQBYNElullZKzzsZ4norZhP3iTIzVoysX1L4WXO19xR7bETke5jcNoinDUjEkxqrYLcBA%2F0xTLsDRm1Ab20rBUwzR%2F2QtfptDvhHyc23%2BlJuROwb6Vut8CMg3jRXlCar8gZlDDeJ%2FrLSwHM9FwMpkppgc7oUXhl1d785tSzLdUzcoNeL%2FhT45jCHp9ddHBOmSo391OBkJf2G82gamPMcMvInqdI879sTe77Fnl5jjzOUMQQ0RNs4%2FLfsSEe%2BbFw57f1%2F%2B2YEu5eVHulWPoJ1fpxSjK5pa3dEf0prxeHnO0IEA4yO5NJbI6l%2ByM6gL%2F9Aj1tj4okSXkCEK88%2FhFzOD2PD59c%2BMAZFw8NRyGOy1cVS3pe8Oh0m0g%2FfOajLaaWj8njQMc%2FBj5jo%2FCvz8BZ%2B13JCyDCqjvgd8yxTvQXyzkyKytybxKYXBEidj2Mpi3L7XYpE53xM0wadhDup%2FujtTULliqvdJ23FWwPrIXBEItXVDW%2F6lZBPS6GLQI3vyyAGrxq15K%2FvXVx17Utz2bgtHfxZx15vKskQC3xkHnTWS4QJuk2YS6pOUNTmO0oBE0M1ItS%2F4rItOCHr6VNQ0NkVl4ZS9aO%2FZ1ZEIOojDd9xhHO4QSStcoRinIbz4q9JIbxrtPMLz4ZoJVsF9qhTTHbQUFIVfMBM3abqN2A8j2KE5FMHbfJ7luba%2F8%2FS75e671n8c951BZ7OkcBCkQqXynqotJksn08Om4Q%2F%2BKqcPzbe6L1F8t8W%2Fu9S1VWx5SKbgETJ7MQspyCUHWJsAXUMWYE55syEpRv9amqb6zOz8C4pWPxHWUjVkHf9NiIQo5NRZKWdhoiHntj4N8xTUQ1XCohvalzllSau5Y8IYIQPny18KGYv5MMJ3k0bQGOrEBgl77Sa6U1fjcwJaMCjXQJeSxFUtXMG1FXs%2FhdvP9JksLyfiNmqn2cR4teuBK6kaWzQUbY36WMSsuT3gDLhnCqMtgPwTL5kVyGXaz4sD9rB1GA9c0Ny7%2FjMEgsKbnaZ6CZRLo1MCOG%2Badr9RME9H4VFCzq4E%2BkR5OeGUCGLvUKEFJ5oruLN%2BLCju3j9f5oPLLii%2FdKr2mwg4zz8rKXfddj4ACQVq6nTlSX4ZTQMAKYZKr&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20240715T020102Z&X-Amz-SignedHeaders=host&X-Amz-Expires=300&X-Amz-Credential=ASIAQ3PHCVTYV6VPQK7M%2F20240715%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Signature=ff71628c703bda3a75cd2e4da01486bc6682313fd02ed5ad7a191aa342ea9440&hash=582757ab42efd100c2153d656976eaa281907b92e5002fd7b941a0b467bfa91d&host=68042c943591013ac2b2430a89b270f6af2c76d8dfd086a07176afe7c76c2c61&pii=S0895611123001052&tid=spdf-ace35205-6602-4a8e-9f10-fbcbd6821018&sid=e604f1941939a948ac08bf31b328c0f52134gxrqa&type=client&tsoh=d3d3LnNjaWVuY2VkaXJlY3QuY29t&ua=131c5e06535354585800&rr=8a36298ebf1f2994&cc=us}
 }
 
 @incollection{khan2023advanced,
@@ -34,7 +36,10 @@
   booktitle={Advances in Deep Generative Models for Medical Artificial Intelligence},
   pages={225--248},
   year={2023},
-  publisher={Springer}
+  publisher={Springer},
+  html={https://dl.acm.org/doi/abs/10.1145/3643832.3661874},
+  pdf={https://dl.acm.org/doi/pdf/10.1145/3643832.3661874},
+  video={https://www.youtube.com/watch?v=X6kXyca23g0&ab_channel=VRF-Mobisys24},
 }
 
 @article{khan2022op2vec,
