--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -37,9 +37,7 @@
   pages={225--248},
   year={2023},
   publisher={Springer},
-  html={https://dl.acm.org/doi/abs/10.1145/3643832.3661874},
-  pdf={https://dl.acm.org/doi/pdf/10.1145/3643832.3661874},
-  video={https://www.youtube.com/watch?v=X6kXyca23g0&ab_channel=VRF-Mobisys24},
+  html={https://link.springer.com/chapter/10.1007/978-3-031-46341-9_9}
 }
 
 @article{khan2022op2vec,
