--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -51,7 +51,9 @@
   pages={3710968},
   year={2022},
   publisher={Wiley Online Library},
-  url={https://onlinelibrary.wiley.com/doi/pdf/10.1155/2022/3710968},
+  url={https://onlinelibrary.wiley.com/doi/10.1155/2022/3710968},
+  html={https://onlinelibrary.wiley.com/doi/10.1155/2022/3710968},
+  pdf={https://onlinelibrary.wiley.com/doi/pdf/10.1155/2022/3710968}
 }
 
 @article{salman2022deep,
@@ -64,7 +66,9 @@ bibtex_show={true},
   number={10},
   pages={2405},
   year={2022},
-  publisher={MDPI}
+  publisher={MDPI},
+  url={https://www.mdpi.com/2075-4418/12/10/2405},
+  html={https://www.mdpi.com/2075-4418/12/10/2405}
 }
 
 @article{khan2021deep,
@@ -78,7 +82,11 @@ bibtex_show={true},
   pages={095003},
   year={2021},
   publisher={IOP Publishing},
-  url={https://iopscience.iop.org/article/10.1088/1361-6579/ac1d59/pdf},
+  url={https://iopscience.iop.org/article/10.1088/1361-6579/ac1d59},
+  html={https://iopscience.iop.org/article/10.1088/1361-6579/ac1d59},
+  pdf={https://iopscience.iop.org/article/10.1088/1361-6579/ac1d59/pdf?casa_token=CN5KcfUtcpMAAAAA:rtehAjC7WyJaGXLBs2RKODEt7bL-wvnGfJHZY_UKV1JDzIREfQbvhxJIsB9cVKurCwwiHItK-tqrIltPIafQizUWi-Oq}
+}
+  
 }
 
 @inproceedings{hasib2021vision,
@@ -89,7 +97,10 @@ bibtex_show={true},
   booktitle={2021 International conference on artificial intelligence (ICAI)},
   pages={74--79},
   year={2021},
-  organization={IEEE}
+  organization={IEEE},
+  url={https://ieeexplore.ieee.org/abstract/document/9445263},
+  html={https://ieeexplore.ieee.org/abstract/document/9445263},
+  pdf={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9445263&casa_token=WieQ0mf9gosAAAAA:K51Iz6D2SiEQdpAWkX91dJ5tMAfk1jnWLtd_Zfc-2z03CszhjU5y15QKZNHFy0qnf-i1bPqXOFc&tag=1}
 }
 
 @inproceedings{qasim2021performance,
@@ -100,7 +111,10 @@ bibtex_show={true},
   booktitle={2021 International Conference on Artificial Intelligence (ICAI)},
   pages={102--107},
   year={2021},
-  organization={IEEE}
+  organization={IEEE},
+  url={https://ieeexplore.ieee.org/abstract/document/9445253},
+  html={https://ieeexplore.ieee.org/abstract/document/9445253},
+  pdf={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9445253&casa_token=mCPQH0dfCYQAAAAA:l_i9_MVvJfmB6FkNOwUskSI3xbxt1h4Jx5EFEx0IuVKSfKZhBZguG2bA21q4G0NERiZxK_IDkiI}
 }
 
 @inproceedings{dastagir2021computer,
@@ -111,7 +125,10 @@ bibtex_show={true},
   booktitle={2021 International Conference on Artificial Intelligence (ICAI)},
   pages={50--55},
   year={2021},
-  organization={IEEE}
+  organization={IEEE},
+    url={https://ieeexplore.ieee.org/abstract/document/9445235},
+  html={https://ieeexplore.ieee.org/abstract/document/9445235},
+  pdf={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9445235&casa_token=M0bTSujgJ0AAAAAA:T_O5MKL8wWuzc65plNg20uTRJaZiQfSzIEHbCKBtYdg23JZdpYRfd_ZBuR2SRbVu9DkbTJrEjrk}
 }
 
 @inproceedings{ahmad2021automatic,
@@ -122,7 +139,10 @@ bibtex_show={true},
   booktitle={2021 15th International Conference on Open Source Systems and Technologies (ICOSST)},
   pages={1--6},
   year={2021},
-  organization={IEEE}
+  organization={IEEE},
+    url={https://ieeexplore.ieee.org/abstract/document/9683975},
+  html={https://ieeexplore.ieee.org/abstract/document/9683975},
+  pdf={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9683975&casa_token=7X4JNE92a6sAAAAA:_a5-R0bd8ySrsbY-8UlrC08sDgXjoo702AgKEV4ft21JJPX2JTUZiT9NA8PLtWuiUUOtBaa_fZI}
 }
 
 @inproceedings{ahmad2021automated,
@@ -133,7 +153,10 @@ bibtex_show={true},
   booktitle={2021 International Conference on Artificial Intelligence (ICAI)},
   pages={108--112},
   year={2021},
-  organization={IEEE}
+  organization={IEEE},
+    url={https://onlinelibrary.wiley.com/doi/10.1155/2022/3710968},
+  html={https://onlinelibrary.wiley.com/doi/10.1155/2022/3710968},
+  pdf={https://onlinelibrary.wiley.com/doi/pdf/10.1155/2022/3710968}
 }
 
 @inproceedings{islam2021evaluation,
@@ -144,5 +167,8 @@ bibtex_show={true},
   booktitle={2021 International Conference on Artificial Intelligence (ICAI)},
   pages={187--192},
   year={2021},
-  organization={IEEE}
+  organization={IEEE},
+    url={https://onlinelibrary.wiley.com/doi/10.1155/2022/3710968},
+  html={https://onlinelibrary.wiley.com/doi/10.1155/2022/3710968},
+  pdf={https://onlinelibrary.wiley.com/doi/pdf/10.1155/2022/3710968}
 }
