--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -154,9 +154,9 @@ bibtex_show={true},
   pages={108--112},
   year={2021},
   organization={IEEE},
-    url={https://onlinelibrary.wiley.com/doi/10.1155/2022/3710968},
-  html={https://onlinelibrary.wiley.com/doi/10.1155/2022/3710968},
-  pdf={https://onlinelibrary.wiley.com/doi/pdf/10.1155/2022/3710968}
+    url={https://ieeexplore.ieee.org/abstract/document/9445242},
+  html={https://ieeexplore.ieee.org/abstract/document/9445242},
+  pdf={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9445242&casa_token=7H6mNkYlr88AAAAA:PjzsKQUAo2WZ5R0q89YuqrkFQHTSjGpAstQ1kvDhCB1lj_cmIzeN2hhdp87NC72h4KGtcqzFqOI}
 }
 
 @inproceedings{islam2021evaluation,
@@ -168,7 +168,7 @@ bibtex_show={true},
   pages={187--192},
   year={2021},
   organization={IEEE},
-    url={https://onlinelibrary.wiley.com/doi/10.1155/2022/3710968},
-  html={https://onlinelibrary.wiley.com/doi/10.1155/2022/3710968},
-  pdf={https://onlinelibrary.wiley.com/doi/pdf/10.1155/2022/3710968}
+    url={https://ieeexplore.ieee.org/abstract/document/9445204},
+  html={https://ieeexplore.ieee.org/abstract/document/9445204},
+  pdf={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9445204&casa_token=GkYNoSoAJioAAAAA:bIYULlDy03aYciNx7_Ui0gMTUwP7Ucxp_iADkx2pc5CA2H0aZ8yx7hrNEOUWHAT1_hDej8db47A}
 }
