--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,148 +16,148 @@
 @article{zeng2023imagecas,
   abbr={CMIG},
   bibtex_show={true},
+   url={https://doi.org/10.1016/j.compmedimag.2023.102287},
+  html={https://doi.org/10.1016/j.compmedimag.2023.102287},
+  pdf={https://pdf.sciencedirectassets.com/271303/1-s2.0-S0895611123X00068/1-s2.0-S0895611123001052/main.pdf?X-Amz-Security-Token=IQoJb3JpZ2luX2VjEOn%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEaCXVzLWVhc3QtMSJHMEUCIQCNQXul40Z%2BS9vkGy2BKmwyybhzpMJq1OtYGqxW2Rk%2BkgIgDyXxBONzmltjOdVg%2F3IlSd4Ltsep0phBX0nBPr1jdakqvAUIsv%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FARAFGgwwNTkwMDM1NDY4NjUiDFL2Oe0h%2BxZ8XY88hyqQBYNElullZKzzsZ4norZhP3iTIzVoysX1L4WXO19xR7bETke5jcNoinDUjEkxqrYLcBA%2F0xTLsDRm1Ab20rBUwzR%2F2QtfptDvhHyc23%2BlJuROwb6Vut8CMg3jRXlCar8gZlDDeJ%2FrLSwHM9FwMpkppgc7oUXhl1d785tSzLdUzcoNeL%2FhT45jCHp9ddHBOmSo391OBkJf2G82gamPMcMvInqdI879sTe77Fnl5jjzOUMQQ0RNs4%2FLfsSEe%2BbFw57f1%2F%2B2YEu5eVHulWPoJ1fpxSjK5pa3dEf0prxeHnO0IEA4yO5NJbI6l%2ByM6gL%2F9Aj1tj4okSXkCEK88%2FhFzOD2PD59c%2BMAZFw8NRyGOy1cVS3pe8Oh0m0g%2FfOajLaaWj8njQMc%2FBj5jo%2FCvz8BZ%2B13JCyDCqjvgd8yxTvQXyzkyKytybxKYXBEidj2Mpi3L7XYpE53xM0wadhDup%2FujtTULliqvdJ23FWwPrIXBEItXVDW%2F6lZBPS6GLQI3vyyAGrxq15K%2FvXVx17Utz2bgtHfxZx15vKskQC3xkHnTWS4QJuk2YS6pOUNTmO0oBE0M1ItS%2F4rItOCHr6VNQ0NkVl4ZS9aO%2FZ1ZEIOojDd9xhHO4QSStcoRinIbz4q9JIbxrtPMLz4ZoJVsF9qhTTHbQUFIVfMBM3abqN2A8j2KE5FMHbfJ7luba%2F8%2FS75e671n8c951BZ7OkcBCkQqXynqotJksn08Om4Q%2F%2BKqcPzbe6L1F8t8W%2Fu9S1VWx5SKbgETJ7MQspyCUHWJsAXUMWYE55syEpRv9amqb6zOz8C4pWPxHWUjVkHf9NiIQo5NRZKWdhoiHntj4N8xTUQ1XCohvalzllSau5Y8IYIQPny18KGYv5MMJ3k0bQGOrEBgl77Sa6U1fjcwJaMCjXQJeSxFUtXMG1FXs%2FhdvP9JksLyfiNmqn2cR4teuBK6kaWzQUbY36WMSsuT3gDLhnCqMtgPwTL5kVyGXaz4sD9rB1GA9c0Ny7%2FjMEgsKbnaZ6CZRLo1MCOG%2Badr9RME9H4VFCzq4E%2BkR5OeGUCGLvUKEFJ5oruLN%2BLCju3j9f5oPLLii%2FdKr2mwg4zz8rKXfddj4ACQVq6nTlSX4ZTQMAKYZKr&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20240715T020102Z&X-Amz-SignedHeaders=host&X-Amz-Expires=300&X-Amz-Credential=ASIAQ3PHCVTYV6VPQK7M%2F20240715%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Signature=ff71628c703bda3a75cd2e4da01486bc6682313fd02ed5ad7a191aa342ea9440&hash=582757ab42efd100c2153d656976eaa281907b92e5002fd7b941a0b467bfa91d&host=68042c943591013ac2b2430a89b270f6af2c76d8dfd086a07176afe7c76c2c61&pii=S0895611123001052&tid=spdf-ace35205-6602-4a8e-9f10-fbcbd6821018&sid=e604f1941939a948ac08bf31b328c0f52134gxrqa&type=client&tsoh=d3d3LnNjaWVuY2VkaXJlY3QuY29t&ua=131c5e06535354585800&rr=8a36298ebf1f2994&cc=us},
   title={Imagecas: A large-scale dataset and benchmark for coronary artery segmentation based on computed tomography angiography images},
   author={Zeng, An and Wu, Chunbiao and Lin, Guisen and Xie, Wen and Hong, Jin and Huang, Meiping and Zhuang, Jian and Bi, Shanshan and Pan, Dan and Ullah, Najeeb and others},
   journal={Computerized Medical Imaging and Graphics},
   volume={109},
   pages={102287},
-  year={2023},
-  url={https://doi.org/10.1016/j.compmedimag.2023.102287},
-  html={https://doi.org/10.1016/j.compmedimag.2023.102287},
-  pdf={https://pdf.sciencedirectassets.com/271303/1-s2.0-S0895611123X00068/1-s2.0-S0895611123001052/main.pdf?X-Amz-Security-Token=IQoJb3JpZ2luX2VjEOn%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEaCXVzLWVhc3QtMSJHMEUCIQCNQXul40Z%2BS9vkGy2BKmwyybhzpMJq1OtYGqxW2Rk%2BkgIgDyXxBONzmltjOdVg%2F3IlSd4Ltsep0phBX0nBPr1jdakqvAUIsv%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FARAFGgwwNTkwMDM1NDY4NjUiDFL2Oe0h%2BxZ8XY88hyqQBYNElullZKzzsZ4norZhP3iTIzVoysX1L4WXO19xR7bETke5jcNoinDUjEkxqrYLcBA%2F0xTLsDRm1Ab20rBUwzR%2F2QtfptDvhHyc23%2BlJuROwb6Vut8CMg3jRXlCar8gZlDDeJ%2FrLSwHM9FwMpkppgc7oUXhl1d785tSzLdUzcoNeL%2FhT45jCHp9ddHBOmSo391OBkJf2G82gamPMcMvInqdI879sTe77Fnl5jjzOUMQQ0RNs4%2FLfsSEe%2BbFw57f1%2F%2B2YEu5eVHulWPoJ1fpxSjK5pa3dEf0prxeHnO0IEA4yO5NJbI6l%2ByM6gL%2F9Aj1tj4okSXkCEK88%2FhFzOD2PD59c%2BMAZFw8NRyGOy1cVS3pe8Oh0m0g%2FfOajLaaWj8njQMc%2FBj5jo%2FCvz8BZ%2B13JCyDCqjvgd8yxTvQXyzkyKytybxKYXBEidj2Mpi3L7XYpE53xM0wadhDup%2FujtTULliqvdJ23FWwPrIXBEItXVDW%2F6lZBPS6GLQI3vyyAGrxq15K%2FvXVx17Utz2bgtHfxZx15vKskQC3xkHnTWS4QJuk2YS6pOUNTmO0oBE0M1ItS%2F4rItOCHr6VNQ0NkVl4ZS9aO%2FZ1ZEIOojDd9xhHO4QSStcoRinIbz4q9JIbxrtPMLz4ZoJVsF9qhTTHbQUFIVfMBM3abqN2A8j2KE5FMHbfJ7luba%2F8%2FS75e671n8c951BZ7OkcBCkQqXynqotJksn08Om4Q%2F%2BKqcPzbe6L1F8t8W%2Fu9S1VWx5SKbgETJ7MQspyCUHWJsAXUMWYE55syEpRv9amqb6zOz8C4pWPxHWUjVkHf9NiIQo5NRZKWdhoiHntj4N8xTUQ1XCohvalzllSau5Y8IYIQPny18KGYv5MMJ3k0bQGOrEBgl77Sa6U1fjcwJaMCjXQJeSxFUtXMG1FXs%2FhdvP9JksLyfiNmqn2cR4teuBK6kaWzQUbY36WMSsuT3gDLhnCqMtgPwTL5kVyGXaz4sD9rB1GA9c0Ny7%2FjMEgsKbnaZ6CZRLo1MCOG%2Badr9RME9H4VFCzq4E%2BkR5OeGUCGLvUKEFJ5oruLN%2BLCju3j9f5oPLLii%2FdKr2mwg4zz8rKXfddj4ACQVq6nTlSX4ZTQMAKYZKr&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20240715T020102Z&X-Amz-SignedHeaders=host&X-Amz-Expires=300&X-Amz-Credential=ASIAQ3PHCVTYV6VPQK7M%2F20240715%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Signature=ff71628c703bda3a75cd2e4da01486bc6682313fd02ed5ad7a191aa342ea9440&hash=582757ab42efd100c2153d656976eaa281907b92e5002fd7b941a0b467bfa91d&host=68042c943591013ac2b2430a89b270f6af2c76d8dfd086a07176afe7c76c2c61&pii=S0895611123001052&tid=spdf-ace35205-6602-4a8e-9f10-fbcbd6821018&sid=e604f1941939a948ac08bf31b328c0f52134gxrqa&type=client&tsoh=d3d3LnNjaWVuY2VkaXJlY3QuY29t&ua=131c5e06535354585800&rr=8a36298ebf1f2994&cc=us}
-}
+  year={2023}
+  }
 
 @incollection{khan2023advanced,
   abbr={Book Chapter},
   bibtex_show={true},
+  html={https://link.springer.com/chapter/10.1007/978-3-031-46341-9_9},
   title={Advanced Deep Learning for Heart Sounds Classification},
   author={Khan, Muhammad Salman and Khan, Faiq Ahmad and Khan, Kaleem Nawaz and Rana, Shahid Imran and Al-Hashemi, Mohammed Abdulla AA},
   booktitle={Advances in Deep Generative Models for Medical Artificial Intelligence},
   pages={225--248},
-  year={2023},
-  html={https://link.springer.com/chapter/10.1007/978-3-031-46341-9_9}
+  year={2023}
 }
 
 @article{khan2022op2vec,
   abbr={SCN},
   bibtex_show={true},
+  url={https://onlinelibrary.wiley.com/doi/10.1155/2022/3710968},
+  html={https://onlinelibrary.wiley.com/doi/10.1155/2022/3710968},
+  pdf={https://onlinelibrary.wiley.com/doi/pdf/10.1155/2022/3710968},
   title={Op2Vec: An Opcode Embedding Technique and Dataset Design for End-to-End Detection of Android Malware},
   author={Khan, Kaleem Nawaz and Ullah, Najeeb and Ali, Sikandar and Khan, Muhammad Salman and Nauman, Mohammad and Ghani, Anwar},
   journal={Security and Communication Networks},
   volume={2022},
   number={1},
   pages={3710968},
-  year={2022},
-  url={https://onlinelibrary.wiley.com/doi/10.1155/2022/3710968},
-  html={https://onlinelibrary.wiley.com/doi/10.1155/2022/3710968},
-  pdf={https://onlinelibrary.wiley.com/doi/pdf/10.1155/2022/3710968}
+  year={2022}
 }
 
 @article{salman2022deep,
 abbr={Diagnostics},
 bibtex_show={true},
+  url={https://www.mdpi.com/2075-4418/12/10/2405},
+  html={https://www.mdpi.com/2075-4418/12/10/2405},
   title={Deep Learning Assisted Automated Assessment of Thalassaemia from Haemoglobin Electrophoresis Images},
   author={Salman Khan, Muhammad and Ullah, Azmat and Khan, Kaleem Nawaz and Riaz, Huma and Yousafzai, Yasar Mehmood and Rahman, Tawsifur and Chowdhury, Muhammad EH and Abul Kashem, Saad Bin},
   journal={Diagnostics},
   volume={12},
   number={10},
   pages={2405},
-  year={2022},
-  url={https://www.mdpi.com/2075-4418/12/10/2405},
-  html={https://www.mdpi.com/2075-4418/12/10/2405}
+  year={2022}
 }
 
 @article{khan2021deep,
 abbr={Phys. Measurement},
 bibtex_show={true},
+ url={https://iopscience.iop.org/article/10.1088/1361-6579/ac1d59},
+  html={https://iopscience.iop.org/article/10.1088/1361-6579/ac1d59},
+  pdf={https://iopscience.iop.org/article/10.1088/1361-6579/ac1d59/pdf?casa_token=CN5KcfUtcpMAAAAA:rtehAjC7WyJaGXLBs2RKODEt7bL-wvnGfJHZY_UKV1JDzIREfQbvhxJIsB9cVKurCwwiHItK-tqrIltPIafQizUWi-Oq},
   title={Deep learning based classification of unsegmented phonocardiogram spectrograms leveraging transfer learning},
   author={Khan, Kaleem Nawaz and Khan, Faiq Ahmad and Abid, Anam and Olmez, Tamer and Dokur, Zumray and Khandakar, Amith and Chowdhury, Muhammad EH and Khan, Muhammad Salman},
   journal={Physiological measurement},
   volume={42},
   number={9},
   pages={095003},
-  year={2021},
-  url={https://iopscience.iop.org/article/10.1088/1361-6579/ac1d59},
-  html={https://iopscience.iop.org/article/10.1088/1361-6579/ac1d59},
-  pdf={https://iopscience.iop.org/article/10.1088/1361-6579/ac1d59/pdf?casa_token=CN5KcfUtcpMAAAAA:rtehAjC7WyJaGXLBs2RKODEt7bL-wvnGfJHZY_UKV1JDzIREfQbvhxJIsB9cVKurCwwiHItK-tqrIltPIafQizUWi-Oq}
-}
+  year={2021}
+  }
   
 }
 
 @inproceedings{hasib2021vision,
 abbr={ICAI},
 bibtex_show={true},
+  url={https://ieeexplore.ieee.org/abstract/document/9445263},
+  html={https://ieeexplore.ieee.org/abstract/document/9445263},
+  pdf={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9445263&casa_token=WieQ0mf9gosAAAAA:K51Iz6D2SiEQdpAWkX91dJ5tMAfk1jnWLtd_Zfc-2z03CszhjU5y15QKZNHFy0qnf-i1bPqXOFc&tag=1},
   title={Vision-based human posture classification and fall detection using convolutional neural network},
   author={Hasib, Rabia and Khan, Kaleem Nawaz and Yu, Miao and Khan, Muhammad Salman},
   booktitle={2021 International conference on artificial intelligence (ICAI)},
   pages={74--79},
-  year={2021},
-  url={https://ieeexplore.ieee.org/abstract/document/9445263},
-  html={https://ieeexplore.ieee.org/abstract/document/9445263},
-  pdf={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9445263&casa_token=WieQ0mf9gosAAAAA:K51Iz6D2SiEQdpAWkX91dJ5tMAfk1jnWLtd_Zfc-2z03CszhjU5y15QKZNHFy0qnf-i1bPqXOFc&tag=1}
-}
+  year={2021}
+  }
 
 @inproceedings{qasim2021performance,
 abbr={ICAI},
 bibtex_show={true},
+  url={https://ieeexplore.ieee.org/abstract/document/9445253},
+  html={https://ieeexplore.ieee.org/abstract/document/9445253},
+  pdf={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9445253&casa_token=mCPQH0dfCYQAAAAA:l_i9_MVvJfmB6FkNOwUskSI3xbxt1h4Jx5EFEx0IuVKSfKZhBZguG2bA21q4G0NERiZxK_IDkiI},
   title={Performance evaluation of background subtraction techniques for video frames},
   author={Qasim, Salman and Khan, Kaleem Nawaz and Yu, Miao and Khan, Muhammad Salman},
   booktitle={2021 International Conference on Artificial Intelligence (ICAI)},
   pages={102--107},
-  year={2021},
-  url={https://ieeexplore.ieee.org/abstract/document/9445253},
-  html={https://ieeexplore.ieee.org/abstract/document/9445253},
-  pdf={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9445253&casa_token=mCPQH0dfCYQAAAAA:l_i9_MVvJfmB6FkNOwUskSI3xbxt1h4Jx5EFEx0IuVKSfKZhBZguG2bA21q4G0NERiZxK_IDkiI}
-}
+  year={2021}
+  }
 
 @inproceedings{dastagir2021computer,
 abbr={ICAI},
 bibtex_show={true},
+ url={https://ieeexplore.ieee.org/abstract/document/9445235},
+  html={https://ieeexplore.ieee.org/abstract/document/9445235},
+  pdf={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9445235&casa_token=M0bTSujgJ0AAAAAA:T_O5MKL8wWuzc65plNg20uTRJaZiQfSzIEHbCKBtYdg23JZdpYRfd_ZBuR2SRbVu9DkbTJrEjrk},
   title={Computer-aided phonocardiogram classification using multidomain time and frequency features},
   author={Dastagir, Jehan and Khan, Faiq Ahmad and Khan, Muhammad Salman and Khan, Kaleem Nawaz},
   booktitle={2021 International Conference on Artificial Intelligence (ICAI)},
   pages={50--55},
-  year={2021},
-  url={https://ieeexplore.ieee.org/abstract/document/9445235},
-  html={https://ieeexplore.ieee.org/abstract/document/9445235},
-  pdf={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9445235&casa_token=M0bTSujgJ0AAAAAA:T_O5MKL8wWuzc65plNg20uTRJaZiQfSzIEHbCKBtYdg23JZdpYRfd_ZBuR2SRbVu9DkbTJrEjrk}
-}
+  year={2021}
+  }
 
 @inproceedings{ahmad2021automatic,
 abbr={ICOSST},
 bibtex_show={true},
+  url={https://ieeexplore.ieee.org/abstract/document/9683975},
+  html={https://ieeexplore.ieee.org/abstract/document/9683975},
+  pdf={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9683975&casa_token=7X4JNE92a6sAAAAA:_a5-R0bd8ySrsbY-8UlrC08sDgXjoo702AgKEV4ft21JJPX2JTUZiT9NA8PLtWuiUUOtBaa_fZI},
   title={Automatic classification of heart sounds using long short-term memory},
   author={Ahmad, Bilal and Khan, Faiq Ahmad and Khan, Kaleem Nawaz and Khan, Muhammad Salman},
   booktitle={2021 15th International Conference on Open Source Systems and Technologies (ICOSST)},
   pages={1--6},
-  year={2021},
-  url={https://ieeexplore.ieee.org/abstract/document/9683975},
-  html={https://ieeexplore.ieee.org/abstract/document/9683975},
-  pdf={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9683975&casa_token=7X4JNE92a6sAAAAA:_a5-R0bd8ySrsbY-8UlrC08sDgXjoo702AgKEV4ft21JJPX2JTUZiT9NA8PLtWuiUUOtBaa_fZI}
-}
+  year={2021}
+  }
 
 @inproceedings{ahmad2021automated,
 abbr={ICAI},
 bibtex_show={true},
+url={https://ieeexplore.ieee.org/abstract/document/9445242},
+  html={https://ieeexplore.ieee.org/abstract/document/9445242},
+  pdf={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9445242&casa_token=7H6mNkYlr88AAAAA:PjzsKQUAo2WZ5R0q89YuqrkFQHTSjGpAstQ1kvDhCB1lj_cmIzeN2hhdp87NC72h4KGtcqzFqOI},
   title={Automated assessment of lymphocytes using machine learning techniques},
   author={Ahmad, Afaq and Ullah, Azmat and Khan, Kaleem Nawaz and Khan, Muhammad Salman},
   booktitle={2021 International Conference on Artificial Intelligence (ICAI)},
   pages={108--112},
-  year={2021},
-  url={https://ieeexplore.ieee.org/abstract/document/9445242},
-  html={https://ieeexplore.ieee.org/abstract/document/9445242},
-  pdf={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9445242&casa_token=7H6mNkYlr88AAAAA:PjzsKQUAo2WZ5R0q89YuqrkFQHTSjGpAstQ1kvDhCB1lj_cmIzeN2hhdp87NC72h4KGtcqzFqOI}
-}
+  year={2021}
+  }
 
 @inproceedings{islam2021evaluation,
 abbr={ICAI},
 bibtex_show={true},
+ year={2021},
+  url={https://ieeexplore.ieee.org/abstract/document/9445204},
+  html={https://ieeexplore.ieee.org/abstract/document/9445204},
+  pdf={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9445204&casa_token=GkYNoSoAJioAAAAA:bIYULlDy03aYciNx7_Ui0gMTUwP7Ucxp_iADkx2pc5CA2H0aZ8yx7hrNEOUWHAT1_hDej8db47A},
   title={Evaluation of preprocessing techniques for U-Net based automated liver segmentation},
   author={Islam, Muhammad and Khan, Kaleem Nawaz and Khan, Muhammad Salman},
   booktitle={2021 International Conference on Artificial Intelligence (ICAI)},
-  pages={187--192},
-  year={2021},
-  url={https://ieeexplore.ieee.org/abstract/document/9445204},
-  html={https://ieeexplore.ieee.org/abstract/document/9445204},
-  pdf={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9445204&casa_token=GkYNoSoAJioAAAAA:bIYULlDy03aYciNx7_Ui0gMTUwP7Ucxp_iADkx2pc5CA2H0aZ8yx7hrNEOUWHAT1_hDej8db47A}
-}
+  pages={187--192}
+ }
